[project]
name = "polymarket-helpers"
version = "0.1.0"
description = ""
authors = [
    {name = "KichdiPatel",email = "ayanpatel09@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "py-clob-client (>=0.25.0,<0.26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
